--- a/models.qmd
+++ b/models.qmd
@@ -10,27 +10,29 @@ format:
 ---
 
 The [*Organizational Maintenance*](./org.html) and [*Repository
-Maintenance*](./repo.html) pages provide various insights into
-maintenance deficits and needs across the whole organization and within
-individual repositories. This page provides more detail on the various [CHAOSS
-(*Community Health Analytics in Open Source Software*)
+Maintenance*](./repo.html) pages provide various insights into maintenance
+deficits and needs across the whole organization and within individual
+repositories. This page provides more detail on the various [CHAOSS (*Community
+Health Analytics in Open Source Software*)
 models](https://chaoss.community/kb-metrics-and-metrics-models/) used to
 generate values shown on those two pages. Each of these conceptual models
 aggregates various individual metrics, and aims to synthesise prominent aspects
 of community health. This page provides insights into a range of those models,
-assessed for each repository in the `epiverse-trace` and `reconhub` GitHub
-organizations. Details of individual metrics can be seen on the [*Repository
-Maintenance* page](./repo.html).
+assessed for each repository in [rOpenSci's package
+registry](https://github.com/ropensci/roregistry/blob/gh-pages/registry.json).
+Details of individual metrics can be seen on the [*Repository Maintenance*
+page](./repo.html).
 
 ## Aggregate Community Health
 
 This page shows aggregate community health scores for all repositories within
-the `reconhub` and `epiverse-trace` organizations. Higher values describe
-repositories with greater community health scores. Values for individual models
-are standardised across all repositories to have mean values of zero and
-standard deviations of one. These results are aggregated across thirteen
-distinct models, leading to maximal aggregated values slightly exceeding that
-value.
+[rOpenSci's package
+registry](https://github.com/ropensci/roregistry/blob/gh-pages/registry.json).
+Higher values describe repositories with greater community health scores.
+Values for individual models are standardised across all repositories to have
+mean values of zero and standard deviations of one. These results are
+aggregated across thirteen distinct models, leading to maximal aggregated
+values slightly exceeding that value.
 
 ```{r load-pkg, echo = FALSE, message = FALSE}
 library (orgmetrics)
