update all js href values to include page name

--- a/index.qmd
+++ b/index.qmd
@@ -462,7 +462,7 @@ chart = {
         .attr("fill", d => (d.id === selectedNode ? "red" : ""))
         .text(d => d.id)
         .html(d =>
-            `<a href="/repo.html"
+            `<a href="/orgmetrics-ropensci/repo.html"
                 onclick="localStorage.setItem('orgmetricsRepo', '${d.id}')">${d.id}
             </a>`)
         .clone(true).lower()
@@ -591,7 +591,7 @@ function pkgfmt(pkg) {
     th.addEventListener("click", () => {
         localStorage.setItem("orgmetricsRepo", pkg);
         th.style.background="#a0f8ff";
-        window.location.href="/repo.html";
+        window.location.href="/orgmetrics-ropensci/repo.html";
     });
 
     return th;
@@ -610,7 +610,7 @@ function ctbfmt(ctb) {
     th.addEventListener("click", () => {
         localStorage.setItem('orgmetricsMaintainer', ctb);
         th.style.background="#a0f8ff";
-        window.location.href="/contributor.html";
+        window.location.href="/orgmetrics-ropensci/contributor.html";
     });
 
     return th;
