--- a/repo.qmd
+++ b/repo.qmd
@@ -289,7 +289,10 @@ data_r_univ_stats = json_data['r_universe']['r_univ_stats'];
 reposAll = metricsTranspose.map(function(item) {
     return item.package;
 });
-repos = Array.from(new Set(reposAll));
+repos = Array.from(new Set(reposAll)).sort((a, b) =>
+    a.localeCompare(b, undefined, { sensitivity: 'base' })
+);
+
 
 // -------- 5A. SEARCH PARAMETERS VS LOCALSTORAGE
 searchParams = new URLSearchParams(window.location.search);
